# onestage

./: CMakeLists.txt  README.md
include/: Amplificador.h  SimpleGraphics.h  mygraphics.h
src/: Amplificador.cpp  SimpleGraphics.cpp  mygraphics.cpp  onestage.cpp
src_probed/: graphs.cpp
